[package]
name = "mbf_bridge"
description = "ModsBeforeFriday ADB Bridge"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.winresource]
ProductName = "ModsBeforeFriday ADB Bridge"
OriginalFilename = "mbf_bridge.exe"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "ws"] }
axum-reverse-proxy = "0.8.0"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3.30"
http = "1.3.1"
image = { version = "0.25.1", default-features = false, features = ["png"] }
lazy_static = "1.5.0"
open = "5.1.3"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tao = "0.32.8"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
urlencoding = "2.1.3"
uuid = { version = "1.3", features = ["v4"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
auto-launch = "0.5.0"
single-instance = "0.3.3"
tray-icon = { version = "0.20.0", default-features = false, features = [] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "fileapi", "winbase", "processenv"] }
winreg = "0.55.0"

[build-dependencies]
winresource = "0.1.20"

[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "*", features = ["vendored"] }
